# tr-note

./: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.css  App.tsx  bindings.ts  main.tsx  resizer.css
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: README.md  tab.json
src-tauri/src/: dir_api.rs  err.rs  favorite_api.rs  http_server_api.rs  lib.rs  main.rs  tab_api.rs  utils.rs
src/components/: ContentHeadView.tsx  ContentPaneView.tsx  ContentView.tsx  DirectoryHeadView.tsx  DirectoryItemView.tsx  DirectoryView.tsx  FileHeadView.tsx  FileView.tsx  GalleryItemView.tsx  GalleryView.tsx  HttpServerProvider.tsx  MdView.tsx  content.ts  contextmenu.css  directory.css  file.css  opener.ts  utils.ts
src/components/favorites/: FavoriteItemView.tsx  FavoritesView.tsx  favorites.css  favorites.ts
src/components/file_views/: AudioView.tsx  EmbedView.tsx  EmptyView.tsx  ErrorView.tsx  ExcalidrawView.tsx  ImageView.tsx  MdView.tsx  MonacoView.tsx  NoneView.tsx  QuillView.tsx  VideoView.tsx
src/routes/: AppLayout.tsx  MainView.tsx
src/stores/: contentsStore.ts  createPathStore.ts  directoryViewTypeStore.ts  editorPosStore.ts  fileViewItemStore.ts  fileViewTypeGroupStore.ts  fileViewTypeMapStore.ts  fileViewTypeStore.ts  folderListOrderStore.ts  folderListSliderStore.ts  folderListStore.ts  folderListVisibleColsStore.ts  isResizingStore.ts  mdPreviewTypeStore.ts  recentPathStore.ts  saveKeyStore.ts  savedContentsStore.ts
(+19 files in other folders)
