[package]
name = "tr-note"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tr_note_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "protocol-asset", "unstable", "devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.14.0"
thiserror = "2.0.15"
tokio = "1.47.1"
specta = "2.0.0-rc.22"
tauri-specta = {version = "2.0.0-rc.21", features = ["derive", "typescript", "javascript"] }
specta-typescript = "0.0.9"
axum = "0.8.4"
http = "1.3.1"
http-body-util = "0.1.3"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
tokio-util = "0.7.16"
mime_guess = "2.0.5"
natord = "1.0.9"
windows = { version = "0.61.3", features = ["Win32_Storage", "Win32_Storage_FileSystem"] }
sysinfo = "0.37.0"
moka = {version = "0.12.10", features = ["future"] }
dirs-next = "2.0.0"

